# backend-python-test

./: AGENTS.md
.agents/skills/python-conventions/: SKILL.md
.agents/skills/testing/: CHANGELOG.md  README.md  SKILL.md
.agents/skills/testing/references/: patterns.md  workflows.md
.agents/skills/testing/templates/: factories_template.py
.github/workflows/: ci.yml
app/: .env.example  .pre-commit-config.yaml  Makefile  main.py  pyproject.toml  pyrightconfig.json  requirements.txt
app/application/: dtos.py
app/application/use_cases/: create_request.py  get_request_status.py  process_request.py
app/core/: dependencies.py  logging.py  settings.py
app/domain/entities/: request.py
app/domain/exceptions/: provider.py
app/domain/ports/: notification_provider.py  process_dispatcher.py  requests_repository.py
app/infrastructure/http/v1/: router.py
app/infrastructure/http/v1/routes/: requests.py
app/infrastructure/providers/: external_notification_provider.py
app/infrastructure/repositories/: in_memory_requests_repository.py
app/infrastructure/workers/: process_worker.py
app/tests/: conftest.py
app/tests/integration/http/v1/: test_requests_routes.py
app/tests/unit/application/use_cases/: test_create_request.py  test_get_request_status.py  test_process_request.py
app/tests/unit/infrastructure/providers/: test_external_notification_provider.py
app/tests/unit/infrastructure/repositories/: test_in_memory_requests_repository.py
app/tests/unit/infrastructure/workers/: test_process_worker.py
skills/testing/references/: factory-boy.md  fixtures.md  repository-tests.md
skills/testing/scripts/: generate_test.py  validate_tests.py
skills/testing/templates/: conftest_template.py
